# H-orbital

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  H-orbital  H-orbital-ui  LICENSE  README.md  pyproject.toml  setup.py
h_orbital/: __init__.py  analytic.py  auto_settings.py  cli.py  constants.py  gui.py  modes.py  plotting.py  quantum_numbers.py
h_orbital.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analytic.py  test_cli.py  test_quantum_numbers.py
